--- a/estilo/login.css
+++ b/estilo/login.css
@@ -20,6 +20,7 @@
 }
 
 html, body{
+    position: relative;
     background-image: linear-gradient(to bottom,#ffa99a,#e4715c,#833066, #0f2354, #0e0f2a);
     background-attachment: fixed;
     width: 100vw;
@@ -27,31 +28,28 @@ html, body{
 }
 
 section#inicial{
-    display: block;
     position: absolute;
-    border-top: 1px solid #f0f8ff;
-    border-bottom: 1px solid #f0f8ff;
-    width: 300px;
-    height: 500px;
+    width: 100vw;
+    height: 100vh;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
 section#inicial > .titulo{
     padding: 5px;
-    margin-top: 50px;
-    color: var(--cor4);
+    margin-top: 15px;
+    color: #f0f8ff;
     font-family: var(--texto);
     font-size: 1.5em;
     font-weight: normal;
     text-align: center;
 }
-section#inicial > form{
+section#inicial > .formulario-pai{
+    display: block;
     position: absolute;
-    width: 90vw;
-    margin-top: px;
+    width: 80vw;
     left: 50%;
-    top: 60%;
+    top: 50%;
     transform: translate(-50%, -50%);
 }
 div.formulario{
@@ -92,22 +90,23 @@ form > input[type=submit]{
     width: 100%;
     font-size: 1.5em;
 }
+
 input.marcar, label{
     font-size: 1em;
     color: aliceblue;
     margin-top: 10px;
 }
-form > a{
-    display: block;
+div.final > a{
+    margin-left:40%;
     color: aliceblue;
     text-decoration: none;
     margin-top: 100px;
     text-align: center;
 }
-form > a:hover{
-    background-color: aliceblue;
-    color: #0e0f2a;
-    border-radius: 20px;
+
+form > .final > a:hover{
+    text-decoration: underline;
+    
 }
 
 
