--- a/estilo/login.css
+++ b/estilo/login.css
@@ -1,3 +1,5 @@
+/*===configurações===*/
+
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?família=Roboto+Condensado:wght@300; 500&display=swap');
 
@@ -7,7 +9,6 @@
     --cor3: #0f2354;
     --cor4: #0e0f2a;
     --texto:'Roboto Condensed', sans-serif;
-
 }
 
 *{
@@ -15,10 +16,8 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 100%;
-    
+    font-size: 100%; 
 }
-
 html, body{
     position: relative;
     background-image: linear-gradient(to bottom,#ffa99a,#e4715c,#833066, #0f2354, #0e0f2a);
@@ -26,16 +25,17 @@ html, body{
     width: 100vw;
     height: 100vh;
 }
+/*==formulario==*/
 
-section#inicial{
+section#principal{
     position: absolute;
-    width: 100vw;
+    width: 80vw;
     height: 100vh;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
-section#inicial > .titulo{
+section#principal > .titulo{
     padding: 5px;
     margin-top: 15px;
     color: #f0f8ff;
@@ -44,45 +44,39 @@ section#inicial > .titulo{
     font-weight: normal;
     text-align: center;
 }
-section#inicial > .formulario-pai{
-    display: block;
-    position: absolute;
-    width: 80vw;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+section#principal > form{
+    margin-top: 80px;
 }
-div.formulario{
+form > div.campo{
     padding: 20px 0px;
     font-size: 1.1em;
 }
 
-div.formulario > i{
+div.campo > i{
     color: #f0f8ff;
     font-size: 1.5em;
     width: 30px;
     
 }
-div.formulario > input{
+div.campo > input{
     background-color: transparent;
     padding: 3px;
     width: calc(100% - 35px);
     border: 0; 
     border-bottom: 1px solid aliceblue;
 }
-div.formulario > input::placeholder{
+div.campo > input::placeholder{
     color: aliceblue;
 }
-div.formulario > input:focus{
+div.campo > input:focus{
     outline: none;
     color: #f0f8ff;
 
 }
-div.formulario > label{
+div.campo > label{
     display: none;
 }
 form > input[type=submit]{
-    display: block;
     margin-top: 20px;
     border: 0;
     border-radius: 10px;
@@ -90,21 +84,23 @@ form > input[type=submit]{
     width: 100%;
     font-size: 1.5em;
 }
+div.final{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 10px;
+}
 
 input.marcar, label{
     font-size: 1em;
     color: aliceblue;
-    margin-top: 10px;
 }
-div.final > a{
-    margin-left:40%;
+div.redefinir > a{
     color: aliceblue;
     text-decoration: none;
-    margin-top: 100px;
-    text-align: center;
 }
 
-form > .final > a:hover{
+div.redefinir > a:hover{
     text-decoration: underline;
     
 }
