--- a/estilo/login.css
+++ b/estilo/login.css
@@ -27,25 +27,70 @@ html, body{
 }
 /*==formulario==*/
 
-section#principal{
-    position: absolute;
-    width: 80vw;
+main#principal{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100vw;
     height: 100vh;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    
+
 }
-section#principal > .titulo{
-    padding: 5px;
-    margin-top: 15px;
+section#container{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    width: 300px ;
+    height: 100vh;
+}
+    
+
+section#titulo{
+    margin-top: 20px;
     color: #f0f8ff;
+}
+section#titulo > h1{
+    padding: 5px;
+    margin: 0px 20px;
     font-family: var(--texto);
     font-size: 1.5em;
     font-weight: normal;
     text-align: center;
 }
-section#principal > form{
-    margin-top: 80px;
+section#titulo > p{
+    padding: 5px;
+    margin: 0px 20px;
+    font-family: var(--texto);
+    font-size: 1.2em;
+    font-weight: normal;
+    text-align: center;
+}
+
+section#redes{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0px 20px;
+}
+section#redes a{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #f0f8ff;
+    box-shadow: 2px 2px 5px rgba(56, 56, 56, 0.502);
+    width: 120px;
+    color: #0e0f2a;
+}
+section#redes a > i{
+    font-size: 1.2em;
+}
+
+section#formulario{
+   margin: 0px 20px;
+   height: 90vw;
 }
 form > div.campo{
     padding: 20px 0px;
