--- a/estilo/login.css
+++ b/estilo/login.css
@@ -18,64 +18,83 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 100%; 
 }
-html, body{
-    background-image: linear-gradient(to bottom,#ffa99a,#e4715c,#833066, #0f2354, #0e0f2a);
-    background-attachment: fixed;
+body{
     width: 100vw;
     height: 100vh;
 }
 /*==formulario==*/
 main#principal{
+    background-image: linear-gradient(to bottom,#ffa99a,#e4715c,#833066, #0f2354, #0e0f2a);
+    background-attachment: fixed;
     position: absolute;
     width: 100vw;
     height: 100vh;
-    
-   
-    
-
 }
 section#container{
     position: relative;
+    display: block;
     border: 1px solid white;
-    width: 90vw;
+    width: 320px;
+    height: 500px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    
-   
-   
 }
 
-    
-
-section#titulo{
-    color: #f0f8ff;
-}
-section#titulo > h1{
+section#container h1{
     padding: 5px;
-    margin: 0px 20px;
+    margin: 5px 5px;
+    color: #f0f8ff;
     font-family: var(--texto);
-    font-size: 1.5em;
+    font-size: 2em;
     font-weight: normal;
     text-align: center;
 }
-section#titulo > p{
+section#container p{
     padding: 5px;
-    margin: 0px 20px;
+    color: #f0f8ff;
     font-family: var(--texto);
     font-size: 1.2em;
     font-weight: normal;
     text-align: center;
 }
 
-/*section#redes{
+section#redes{
     display: flex;
-    flex-direction: row;
-    gap: 30px;
-    justify-content: center;
-    margin: 50px 20px;
+    justify-content: space-evenly;
+    margin: 20px auto;
+    
 }
-section#redes a{
+section#redes div{
+    background-color: #f0f8ff;
+    width: 120px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 3px 3px 8px #0e0f2a2e;
+}
+section#redes div > a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-decoration: none;
+    padding: 5px;
+}
+section#redes a > i{
+    color: #0e0f2a;
+    font-size: 1.2em;
+    
+    
+
+}
+section#redes a > p{
+    font-size: 1em;
+    color: #0e0f2a;
+
+
+}
+/*section#redes a{
     display: flex;
     justify-content: center;
     text-decoration: none;
@@ -89,7 +108,7 @@ section#redes a{
 }
 section#redes a > i{
     font-size: 1.2em;
-}
+}*/
 
 section#formulario{
    margin: 0px 20px;
@@ -150,12 +169,6 @@ div.redefinir > a{
 
 div.redefinir > a:hover{
     text-decoration: underline;
-    
-}
-@media screen and (min-width: 768px){
-    {
-        width: 100vw;
-    }
     
 }
 
